# nxtscape

./: .gitignore  build.gradle.kts  settings.gradle.kts  versions.properties
client/: build.gradle.kts
client/natives/: Cargo.toml  build.gradle.kts
client/natives/src/: lib.rs
client/src/main/kotlin/dev/nxtscape/client/: Injector.kt  Main.kt  Updater.kt
