[package]
name = "nxtscape"
version = "1.0.0"
edition = "2018"

[lib]
name = "nxtscape"
crate-type = ["cdylib"]
required-features = ["macros"]

[dependencies]
winapi = { version = "0.3.9", features = ["everything"] }
tokio = { version = "1.17.0", features = ["full"] }
mem = { git = "https://github.com/steele123/mem-rs", branch = "master" }
log = "0.4.14"
simple_logger = "2.1.0"